--- a/src/components/design.css
+++ b/src/components/design.css
@@ -64,6 +64,7 @@ ul{
 
 .sidebar-item{
     color: #b0bec5;
+    cursor: pointer;
 }
 
 .skill{
@@ -189,4 +190,23 @@ a{
     transform: translate(-50%, -50%);
     transition: transform 0.1s ease;
 }
-  
+@media only screen and (max-width: 768px) {
+    .sidebar-menu{
+        display: none;
+    }
+    .trail{
+        display: none;
+    }
+    .nav-items{
+        justify-content: center;
+    }
+    .skill{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1.5rem;
+        justify-items: center;
+        transition: transform 0.3s ease;    
+    }
+    
+    
+}
