--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,7 @@ body{
    .main{
     width: 100%;
     padding: 0.5rem;
+    box-shadow: none;
    }
    .nav-container{
     flex-direction: column;
@@ -169,7 +170,11 @@ body{
     margin-bottom: 10rem;
    }
    .skills{
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    }
+    .contacts{
+        margin-top: 3rem;
     }
 }
