--- a/src/components/design.css
+++ b/src/components/design.css
@@ -207,6 +207,19 @@ a{
         justify-items: center;
         transition: transform 0.3s ease;    
     }
-    
-    
+    .skill{
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    .nav-items{
+        position: fixed;
+        top: 0;
+        margin: 0.5rem;
+        z-index: 5;
+        border: 1px solid lightgray;
+        border-radius: 20px;
+        padding: 0.5rem;
+        margin-bottom: 1rem;
+    }
 }
