--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,11 @@ body{
 .contact-icons:hover{
     transform: scale(1.2);
 }
-
+.bottombar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 @media only screen and (max-width: 768px) {
    .main{
     width: 100%;
@@ -167,7 +171,7 @@ body{
     grid-template-columns: 1fr;
     gap: 0.5rem;
     justify-content: center;
-    margin-bottom: 10rem;
+    margin-bottom: 2.5rem;
    }
    .skills{
     display: flex;
