--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@ body{
   font-weight: 300;
   font-style: normal;
   padding: 1rem;
+
 }
+
 .nav-container{
     display: flex;
     justify-content: center;
@@ -154,6 +156,14 @@ body{
     align-items: center;
 }
 @media only screen and (max-width: 768px) {
+    .personal{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .introduction{
+        text-align: center;
+    }
    .main{
     width: 100%;
     padding: 0.5rem;
