--- a/src/components/design.css
+++ b/src/components/design.css
@@ -21,6 +21,8 @@ ul{
     font-weight: 400; 
     position: relative; 
     color: #b0bec5;
+    display: flex;
+    gap: 0.2rem;
 }
 .nav-item:hover{
     color: #000;
@@ -28,6 +30,7 @@ ul{
     cursor: pointer;
 }
 .nav-item::after {
+    margin-top: 5rem;
     content: '';
     position: absolute;
     left: 0;
@@ -65,6 +68,8 @@ ul{
 .sidebar-item{
     color: #b0bec5;
     cursor: pointer;
+    display: flex;
+    gap: 0.2rem;
 }
 
 .skill{
@@ -200,9 +205,6 @@ a{
     .trail{
         display: none;
     }
-    .nav-items{
-        justify-content: center;
-    }
     .skill{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -228,4 +230,5 @@ a{
         backdrop-filter: blur(10px); 
         -webkit-backdrop-filter: blur(10px);
     }
+   
 }
